--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,11 +8,11 @@ server:
 spring:
   # 39.99.215.48是阿里云服务器
   datasource:
-     url: jdbc:mysql://localhost:3306/new_test?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true&allowMultiQueries=true
-#     url: jdbc:mysql://39.99.215.48:3306/new_test?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true&allowMultiQueries=true
+#     url: jdbc:mysql://localhost:3306/new_test?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true&allowMultiQueries=true
+     url: jdbc:mysql://10.103.238.145:3306/new_test?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true&allowMultiQueries=true
      driver-class-name: com.mysql.cj.jdbc.Driver
      username: root
-     password: root
+     password: 123456
 
   servlet:
      multipart:
